--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,7 @@ jobs:
           python-version: "3.10"
       - name: flake8 Lint
         uses: py-actions/flake8@v2
+        with:
+          ignore: "F401"
+          max-line-length: "100"
+          plugins: "flake8-bugbear==22.1.11 flake8-black"
