--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ authors = [{ name = "zhzhongshi", email = "zhz894524@163.com" }]
 license = { text = "MIT" }
 dependencies = [
     "nonebot2>=2.2.0,<3.0.0",
-    "nonebot-adapter-onebot>=2.4.3",
-    "httpx>=0.27.0",
-    "librosa>=0.10.1",
+    "nonebot-adapter-onebot",
+    "httpx",
+    "librosa",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
